fix(theme.css): adjust background and border color variables for improved contrast

--- a/src/styles/tailwind/theme.css
+++ b/src/styles/tailwind/theme.css
@@ -2,10 +2,10 @@
   --color-accent-contrast: light-dark(var(--color-zinc-100), var(--color-zinc-900));
   --color-accent: light-dark(var(--color-violet-600), var(--color-violet-400));
 
-  --color-background-subtle: light-dark(var(--color-zinc-100), var(--color-zinc-900));
-  --color-background: light-dark(var(--color-zinc-50), var(--color-zinc-950));
+  --color-background-subtle: light-dark(var(--color-zinc-100), var(--color-zinc-800));
+  --color-background: light-dark(var(--color-zinc-50), var(--color-zinc-900));
 
-  --color-border: light-dark(var(--color-zinc-200), var(--color-zinc-800));
+  --color-border: light-dark(var(--color-zinc-200), var(--color-zinc-700));
 
   --color-foreground-subtle: light-dark(var(--color-zinc-600), var(--color-zinc-400));
   --color-foreground: light-dark(var(--color-zinc-900), var(--color-zinc-100));
